# kdeconnect.koplugin

./: .gitignore  CMakeLists.txt  README.md  _meta.lua  device.lua  genkey.c  main.lua  user_settings.h
plugins/: __init__.lua  clipboard.lua  control.lua  notification.lua  ping.lua  share.lua
utils/: file.lua  table.lua
